Need to Restart for espeak

--- a/Assignment2_1/src/sample/selection.fxml
+++ b/Assignment2_1/src/sample/selection.fxml
@@ -25,7 +25,7 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <Button layoutX="106.0" layoutY="402.0" mnemonicParsing="false" text="Preview" />
+      <Button layoutX="106.0" layoutY="402.0" mnemonicParsing="false" onAction="#preview" text="Preview" />
       <Button layoutX="331.0" layoutY="402.0" mnemonicParsing="false" text="Create" />
       <Button layoutX="173.0" layoutY="450.0" mnemonicParsing="false" text="Return to Main Menu" />
       <TextArea fx:id="lines" layoutX="67.0" layoutY="77.0" prefHeight="104.0" prefWidth="365.0" />
