--- a/Assignment2_1/src/sample/menu.fxml
+++ b/Assignment2_1/src/sample/menu.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MenuController">
    <children>
       <Label layoutX="14.0" layoutY="11.0" prefHeight="50.0" prefWidth="142.0" text="List of Creations:" underline="true" />
       <HBox layoutX="14.0" layoutY="50.0" prefHeight="300.0" prefWidth="300.0">
@@ -33,7 +33,7 @@
       </HBox>
       <StackPane layoutX="365.0" layoutY="58.0" prefHeight="300.0" prefWidth="104.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#buttonCreate" prefHeight="67.0" prefWidth="103.0" text="Button" />
+            <Button mnemonicParsing="false" onAction="#buttonCreate" prefHeight="67.0" prefWidth="103.0" text="Create" />
          </children>
       </StackPane>
    </children>
