--- a/Assignment2_1/src/sample/selection.fxml
+++ b/Assignment2_1/src/sample/selection.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -14,21 +15,27 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <Text fontSmoothingType="LCD" layoutX="137.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Copy lines into box below to make creation (max 20 words)" textAlignment="CENTER" wrappingWidth="225.43017578125">
+      <Text fontSmoothingType="LCD" layoutX="137.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Copy lines into box below to make creation (max 30 words)" textAlignment="CENTER" wrappingWidth="225.43017578125">
          <font>
             <Font size="11.0" />
          </font>
       </Text>
-      <ComboBox fx:id="voice" layoutX="250.0" layoutY="363.0" prefWidth="150.0" />
-      <Text fontSmoothingType="LCD" layoutX="100.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Voice:" textAlignment="CENTER" wrappingWidth="134.43017578125">
+      <ComboBox fx:id="voice" layoutX="204.0" layoutY="362.0" prefWidth="150.0" />
+      <Text fontSmoothingType="LCD" layoutX="70.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Voice:" textAlignment="CENTER" wrappingWidth="134.43017578125">
          <font>
             <Font size="14.0" />
          </font>
       </Text>
-      <Button layoutX="106.0" layoutY="402.0" mnemonicParsing="false" onAction="#preview" text="Preview" />
-      <Button layoutX="331.0" layoutY="402.0" mnemonicParsing="false" text="Create" />
-      <Button layoutX="173.0" layoutY="450.0" mnemonicParsing="false" text="Return to Main Menu" />
+      <Button layoutX="365.0" layoutY="362.0" mnemonicParsing="false" onAction="#preview" text="Preview" />
+      <Button layoutX="369.0" layoutY="415.0" mnemonicParsing="false" onAction="#create" text="Create" />
+      <Button layoutX="172.0" layoutY="460.0" mnemonicParsing="false" onAction="#buttonMenu" text="Return to Main Menu" />
       <TextArea fx:id="lines" layoutX="67.0" layoutY="77.0" prefHeight="104.0" prefWidth="365.0" />
       <TextArea fx:id="selected_lines" layoutX="67.0" layoutY="239.0" prefHeight="104.0" prefWidth="365.0" />
+      <TextField fx:id="creation_name" layoutX="204.0" layoutY="415.0" prefHeight="26.0" prefWidth="150.0" />
+      <Text layoutX="90.0" layoutY="432.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Name:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
