--- a/Assignment2_1/src/sample/quiz.fxml
+++ b/Assignment2_1/src/sample/quiz.fxml
@@ -7,14 +7,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.QuizController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../Style/palette.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.QuizController">
    <children>
       <MediaView fx:id="_view" fitHeight="200.0" fitWidth="200.0" layoutX="139.0" layoutY="50.0" />
       <Button layoutX="188.0" layoutY="281.0" mnemonicParsing="false" onAction="#buttonPlayPause" prefHeight="26.0" prefWidth="103.0" text="Play/Pause" />
       <Button layoutX="93.0" layoutY="281.0" mnemonicParsing="false" onAction="#buttonBack" prefHeight="26.0" prefWidth="64.0" text="&lt;--" />
       <Button layoutX="321.0" layoutY="281.0" mnemonicParsing="false" onAction="#buttonForward" prefHeight="26.0" prefWidth="64.0" text="--&gt;" />
       <TextField fx:id="guess" layoutX="139.0" layoutY="384.0" />
-      <Text layoutX="20.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Searched Term:" />
+      <Text layoutX="8.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Text" text="Searched Term:">
+         <font>
+            <Font name="AnjaliOldLipi Regular" size="18.0" />
+         </font></Text>
       <Button fx:id="submit" layoutX="339.0" layoutY="384.0" mnemonicParsing="false" onAction="#submitAnswer" text="Submit" />
       <Button layoutX="139.0" layoutY="438.0" mnemonicParsing="false" onAction="#buttonMenu" prefHeight="26.0" prefWidth="171.0" text="Back to Main Menu" />
       <Button fx:id="next" layoutX="340.0" layoutY="438.0" mnemonicParsing="false" onAction="#nextButton" prefHeight="26.0" prefWidth="65.0" text="Next" />
