Changed choicebox style

--- a/Assignment2_1/src/Style/palette.css
+++ b/Assignment2_1/src/Style/palette.css
@@ -39,5 +39,11 @@
     -fx-control-inner-background-alt: light-primary-color;
 }
 
+.choice-box { -fx-background-color: primary-text-color; }
+.choice-box .context-menu { -fx-background-color: text-primary-color; }
+.choice-box .menu-item:focused { -fx-background-color: light-primary-color; }
+.choice-box .menu-item > .label { -fx-text-fill: primary-text-color; }
+.choice-box .menu-item:focused > .label { -fx-text-fill: primary-text-color; }
+
 
 
