Submission with external styles

--- a/Assignment2_1/src/FXML/menu.fxml
+++ b/Assignment2_1/src/FXML/menu.fxml
@@ -13,15 +13,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../Style/palette.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="./Style/palette.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MenuController">
    <children>
-      <Label layoutX="20.0" layoutY="109.0" prefHeight="50.0" prefWidth="171.0" stylesheets="@../Style/palette.css" text="List of Creations:" underline="true">
+      <Label layoutX="20.0" layoutY="109.0" prefHeight="50.0" prefWidth="171.0" stylesheets="./Style/palette.css" text="List of Creations:" underline="true">
          <font>
             <Font name="AnjaliOldLipi Regular" size="18.0" />
          </font></Label>
       <HBox layoutX="20.0" layoutY="153.0" prefHeight="300.0" prefWidth="300.0">
          <children>
-            <ListView fx:id="listView" maxHeight="300.0" prefHeight="300.0" prefWidth="250.0" stylesheets="@../Style/palette.css" />
+            <ListView fx:id="listView" maxHeight="300.0" prefHeight="300.0" prefWidth="250.0" stylesheets="./Style/palette.css" />
          </children>
       </HBox>
       <Text layoutX="113.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Text" text="VARpedia" textAlignment="CENTER" wrappingWidth="273.7294921875">
@@ -48,70 +48,70 @@
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="6">
                <children>
-                  <Button mnemonicParsing="false" onAction="#buttonQuiz" prefHeight="100.0" prefWidth="120.0" stylesheets="@../Style/palette.css" text="Quiz">
+                  <Button mnemonicParsing="false" onAction="#buttonQuiz" prefHeight="100.0" prefWidth="120.0" stylesheets="./Style/palette.css" text="Quiz">
                      <font>
                         <Font name="AnjaliOldLipi Regular" size="24.0" />
                      </font>
                   </Button>
                   <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Icons/quiz.png" />
+                        <Image url="./Style/Icons/quiz.png" />
                      </image>
                   </ImageView>
                </children>
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <Button mnemonicParsing="false" onAction="#buttonCreate" prefHeight="100.0" prefWidth="120.0" stylesheets="@../Style/palette.css" text="Create">
+                  <Button mnemonicParsing="false" onAction="#buttonCreate" prefHeight="100.0" prefWidth="120.0" stylesheets="./Style/palette.css" text="Create">
                      <font>
                         <Font name="AnjaliOldLipi Regular" size="24.0" />
                      </font>
                   </Button>
                   <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Icons/create.png" />
+                        <Image url="./Style/Icons/create.png" />
                      </image>
                   </ImageView>
                </children>
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#buttonPlay" prefHeight="100.0" prefWidth="120.0" stylesheets="@../Style/palette.css" text="Play">
+                  <Button mnemonicParsing="false" onAction="#buttonPlay" prefHeight="100.0" prefWidth="120.0" stylesheets="./Style/palette.css" text="Play">
                      <font>
                         <Font name="AnjaliOldLipi Regular" size="24.0" />
                      </font>
                   </Button>
                   <ImageView fx:id="p" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Icons/play.png" />
+                        <Image url="./Style/Icons/play.png" />
                      </image>
                   </ImageView>
                </children>
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="4">
                <children>
-                  <Button mnemonicParsing="false" onAction="#buttonDelete" prefHeight="100.0" prefWidth="120.0" stylesheets="@../Style/palette.css" text="Delete">
+                  <Button mnemonicParsing="false" onAction="#buttonDelete" prefHeight="100.0" prefWidth="120.0" stylesheets="./Style/palette.css" text="Delete">
                      <font>
                         <Font name="AnjaliOldLipi Regular" size="24.0" />
                      </font>
                   </Button>
                   <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Icons/delete.png" />
+                        <Image url="./Style/Icons/delete.png" />
                      </image>
                   </ImageView>
                </children>
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="8">
                <children>
-                  <Button mnemonicParsing="false" onAction="#buttonQuit" prefHeight="100.0" prefWidth="120.0" stylesheets="@../Style/palette.css" text="Quit">
+                  <Button mnemonicParsing="false" onAction="#buttonQuit" prefHeight="100.0" prefWidth="120.0" stylesheets="./Style/palette.css" text="Quit">
                      <font>
                         <Font name="AnjaliOldLipi Regular" size="24.0" />
                      </font>
                   </Button>
                   <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Icons/exit.png" />
+                        <Image url="./Style/Icons/exit.png" />
                      </image>
                   </ImageView>
                </children>
