--- a/Assignment2_1/src/FXML/ChooseAudio.fxml
+++ b/Assignment2_1/src/FXML/ChooseAudio.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../Style/palette.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ChooseAudioController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="./Style/palette.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ChooseAudioController">
    <children>
       <HBox alignment="CENTER" layoutX="5.0" layoutY="14.0" prefHeight="300.0" prefWidth="490.0">
          <children>
@@ -38,7 +38,7 @@
                         </Button>
                         <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../Icons/plus.png" />
+                              <Image url="./Style/Icons/plus.png" />
                            </image>
                         </ImageView>
                      </children>
@@ -52,7 +52,7 @@
                         </Button>
                         <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../Icons/remove.png" />
+                              <Image url="./Style/Icons/remove.png" />
                            </image>
                         </ImageView>
                      </children>
@@ -82,7 +82,7 @@
                   </Label>
                   <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Icons/music.png" />
+                        <Image url="./Style/Icons/music.png" />
                      </image>
                   </ImageView>
                </children>
@@ -103,7 +103,7 @@
          <children>
             <ImageView fitHeight="45.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Icons/back.png" />
+                  <Image url="./Style/Icons/back.png" />
                </image>
             </ImageView>
             <Button mnemonicParsing="false" onAction="#buttonMenu" prefHeight="40.0" prefWidth="137.0" text="Go Back to Menu" />
@@ -124,7 +124,7 @@
             <Button fx:id="createButton" mnemonicParsing="false" onAction="#flickr" prefHeight="40.0" prefWidth="137.0" text="Make Creation" />
             <ImageView fitHeight="45.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Icons/forward.png" />
+                  <Image url="./Style/Icons/forward.png" />
                </image>
             </ImageView>
          </children>
