--- a/Assignment2_1/src/FXML/images.fxml
+++ b/Assignment2_1/src/FXML/images.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../Style/palette.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ChooseImageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="./Style/palette.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ChooseImageController">
    <children>
       <ImageView fx:id="img1" fitHeight="100.0" fitWidth="100.0" layoutY="90.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="img2" fitHeight="100.0" fitWidth="100.0" layoutX="100.0" layoutY="90.0" pickOnBounds="true" preserveRatio="true" />
@@ -109,7 +109,7 @@
          <children>
             <ImageView fitHeight="45.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Icons/back.png" />
+                  <Image url="./Style/Icons/back.png" />
                </image>
             </ImageView>
             <Button mnemonicParsing="false" onAction="#buttonMenu" prefHeight="40.0" prefWidth="137.0" text="Go Back to Menu" />
@@ -120,7 +120,7 @@
             <Button fx:id="createButton" mnemonicParsing="false" onAction="#create" prefHeight="40.0" prefWidth="137.0" text="Make Creation" />
             <ImageView fitHeight="45.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Icons/forward.png" />
+                  <Image url="./Style/Icons/forward.png" />
                </image>
             </ImageView>
          </children>
