--- a/Assignment2_1/src/FXML/something.fxml
+++ b/Assignment2_1/src/FXML/something.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../Style/palette.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MediaPlayerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="./Style/palette.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MediaPlayerController">
    <children>
       <MediaView fx:id="_view" fitHeight="400.0" fitWidth="400.0" layoutX="50.0" layoutY="36.0" />
       <HBox alignment="CENTER" layoutY="436.0" prefHeight="50.0" prefWidth="300.0" spacing="10.0">
